change a and li to divs and ol to div as well

--- a/projects/index.html
+++ b/projects/index.html
@@ -2,6 +2,7 @@
 layout: page
 title: 'Projects'
 breadcrumb: 'Projects'
+permalink: /projects/index.html
 ---
 {% for project in site.data.projects %}
 <div class="card bg-dark">
